忽略部分文件，调整默认参数

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ easysocketPy/.idea/
 easysocketPy/__pycache__/
 
 socketwin/
+
+easysocketPy/log.log
+
+.vs/socketserver/v16/.suo
+
+*.lock
+
+.vs/socketserver/DesignTimeBuild/
+
+*.ide
